[project]
name = "tsdbs-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "cassandra-driver>=3.29.2",
    "duckdb>=1.2.2",
    "gevent>=25.4.2",
    "kafka-python>=2.2.4",
    "mysql-connector>=2.2.9",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyspark>=3.5.5",
    "pyyaml>=6.0.2",
    "questdb>=2.0.4",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "starrocks>=1.2.2",
    "psycopg2-binary>=2.9.9", # For TimescaleDB
    "streamlit>=1.45.0",
]
